--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body {
 }
 
 h1, h2 {
-    color: #bb86fc;
+    color: rgb(112, 112, 112);
     text-align: center;
 }
 
@@ -48,7 +48,7 @@ input:focus {
 
 button {
     padding: 10px 15px;
-    background-color: #3700b3;
+    background-color: #424242;
     color: white;
     border: none;
     border-radius: 4px;
@@ -57,15 +57,15 @@ button {
 }
 
 button:hover {
-    background-color: #6200ee;
+    background-color: #616161;
 }
 
 #showResultsBtn {
-    background-color: #018786;
+    background-color: #757575;
 }
 
 #showResultsBtn:hover {
-    background-color: #03dac6;
+    background-color: #9e9e9e;
 }
 
 .leaderboard {
@@ -85,7 +85,7 @@ th, td {
 }
 
 th {
-    background-color: #3700b3;
+    background-color: #424242;
     color: white;
 }
 
@@ -127,7 +127,7 @@ tr:hover {
     background-color: #1e1e1e;
     margin: 15% auto;
     padding: 20px;
-    border: 1px solid #bb86fc;
+    border: 1px solid #616161;
     border-radius: 8px;
     width: 80%;
     max-width: 500px;
